--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: ruby
 rvm:
   - 2.3.3
 script:
+  - bundle exec rubocop
   - bundle exec rails db:migrate RAILS_ENV=test
   - bundle exec rspec
 services:
